--- a/style2.css
+++ b/style2.css
@@ -3,12 +3,12 @@ main{
     height: 95vh;  /* i needed to set fixed height of main instead of the div as i am scrolling the div inside the main. */
 }
 
-body{
+body{ /* hidden the scrolling of body */
     overflow:hidden;
     padding-top: 10px;
 }
 
-#TimerAndInfo{
+#TimerAndInfo{ /* style for the LHS div that contains the div for the timer */
 
     flex:0.2;
 
@@ -25,14 +25,14 @@ body{
 
 }
 
-#time{
+#time{ /* style for the div that contains time text like 10:00 */
     font-size: 40px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
     padding-inline: 10px;
 }
 
-#typingPara{
+#typingPara{ /* style for div that contains numerous small paragraphs 1 letter each */
 
     overflow-y: auto;
 
@@ -51,6 +51,6 @@ body{
     
 }
 
-#typingPara::-webkit-scrollbar { /* pretty good i asked from chatgpt */
+#typingPara::-webkit-scrollbar { /* pretty good i asked from chatgpt, removes the scrollbar only for chrome*/
     display: none;
 }
